@@ -269,7 +269,7 @@ public class CompressController {
             if (references.isEmpty()) continue;
 
             // Get the first instance of this image
-            PDImageXObject originalImage = getOriginalImage(doc, references.get(0));
+            PDImageXObject originalImage = getOriginalImage(doc, references.getFirst());
 
             // Track original size
             int originalSize = (int) originalImage.getCOSObject().getLength();
@@ -951,8 +951,7 @@ public class CompressController {
         Double lineArtThreshold = request.getLineArtThreshold();
         Integer lineArtEdgeLevel = request.getLineArtEdgeLevel();
         if (expectedOutputSizeString == null && optimizeLevel == null) {
-            throw ExceptionUtils.createIllegalArgumentException(
-                    ExceptionUtils.ErrorCode.COMPRESSION_OPTIONS);
+            throw ExceptionUtils.createCompressionOptionsRequiredException();
         }
 
         Long expectedOutputSize = 0L;
@@ -1170,7 +1169,7 @@ public class CompressController {
             List<ImageReference> references = entry.getValue();
             if (references.isEmpty()) continue;
 
-            PDImageXObject originalImage = getOriginalImage(doc, references.get(0));
+            PDImageXObject originalImage = getOriginalImage(doc, references.getFirst());
 
             int originalSize = (int) originalImage.getCOSObject().getLength();
             stats.totalOriginalBytes += originalSize;
@@ -1417,10 +1416,7 @@ public class CompressController {
 
             } catch (IOException e) {
                 if (returnCode != null && returnCode.getRc() != 3) {
-                    throw ExceptionUtils.createIOException(
-                            ExceptionUtils.ErrorCode.QPDF_COMPRESSION.getMessageKey(),
-                            ExceptionUtils.ErrorCode.QPDF_COMPRESSION.getDefaultMessage(),
-                            e);
+                    throw ExceptionUtils.createQpdfCompressionException(e);
                 }
                 // If QPDF fails, keep using the current file
                 log.warn("QPDF compression failed, continuing with current file", e);
