@@ -133,6 +133,7 @@ public class PortalInfraAuditService {
             return "processing";
         }
         return switch (t) {
+            case ORG_OWNERSHIP_CHANGE -> "elevation";
             case USER_LOGIN, USER_LOGOUT, USER_FAILED_LOGIN -> "auth";
             case SETTINGS_CHANGED, USER_PROFILE_UPDATE -> "config";
             case PDF_PROCESS, FILE_OPERATION -> isSecurityPath(path) ? "security" : "processing";
@@ -190,6 +191,7 @@ public class PortalInfraAuditService {
             return prettyTool(path);
         }
         return switch (t) {
+            case ORG_OWNERSHIP_CHANGE -> "Organization ownership changed";
             case USER_LOGIN -> "User signed in";
             case USER_LOGOUT -> "User signed out";
             case USER_FAILED_LOGIN -> "Failed sign-in attempt";
@@ -299,7 +301,7 @@ public class PortalInfraAuditService {
         Object files = data.get("files");
         if (files instanceof List<?> list
                 && !list.isEmpty()
-                && list.get(0) instanceof Map<?, ?> f) {
+                && list.getFirst() instanceof Map<?, ?> f) {
             Object name = ((Map<String, Object>) f).get("name");
             return name != null ? String.valueOf(name) : null;
         }
